<resources>
    <string name="app_name">SmsOtp</string>
    <string name="action_settings">Settings</string>
    <string name="service_desc">Background service for web server which listens to incoming request and handles them</string>
    <string name="service_notifi_title">SMSOTP Service</string>
    <string name="service_notifi_msg">Web Server running…</string>
    <string name="status">Status</string>
    <string name="users">Users</string>
    <string name="web_app">Web App</string>
    <string name="db_icon_desc">Database Icon</string>
    <string name="server_port_icon_desc">Server port icon</string>
    <string name="wifi_ip_icon_desc">Wifi IP icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_user">Create User</string>
    <string name="user_image">User image</string>
    <string name="normal">Normal</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_user">Delete User</string>
    <string name="del_user_confirm">Delete this user?</string>
    <string name="user_id">User ID: %d</string>
    <string name="d_comm_executed">%d commands executed</string>
    <string name="clear_commands">Clear commands</string>
    <string name="web_server">Web Server</string>
    <string name="sms_permission_rationale">Permit the app to send SMS so the REST API can function.</string>
    <string name="server_port">Server Port</string>
    <string name="setting_port_summary">The port on which the server will run</string>
    <string name="pref_server_warning">Stop the server before changing this setting!</string>
    <string name="sqlite" translatable="false">SQLite</string>
    <string name="setting_sim_summary">The SIM card the server should use</string>
    <string name="pref_port_warning">Chosen port is out of range[0, 65535]!</string>
    <string name="settings_rationale">We require permission to display your network operators. You will be able to choose one of them to send SMS.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="cleared_commands">Cleared commands for this user!</string>
    <string name="refresh">Refresh</string>
</resources>